@@ -9,7 +9,6 @@ findFacePosition();
 addModels();
 
 calculateColour();
-console.log(clouds.position);
-console.log(data.width);
+console.log(clouds);
 
 window.addEventListener('resize', resizeScene);
