@@ -3,6 +3,7 @@
 ### Added
 - Custom shaders for Sun and Moon objects
 - Linked glow intensity(c) to sun/moon intensity controls
+- Cloud controls
 
 ## Changed
 - Updated clouds from a BoxGeometry to a Geometry that consists of multiple SphereGeometry
